--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <title>Netpal | Welcome</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="logo_tuto">
+	
   </head>
   <body>
+  
+
+<script>
+
+var win = window.open("popup page.html", '1366002941508','width=1500,height=700,left=375,top=330');
+
+setTimeout(function () { win.close();}, 5000);</script>
+
     <header>
       <div class="boite">
         <div id="titre">
@@ -18,9 +27,9 @@
         </div>
         <nav>
           <ul>
-            <li class = "current"><a href="index.html">Net-Pal</a></li>
+            <li class = "current"><a href="index.html"> Net-Pal</a></li>
             <a href="product.html">Services</a>
-            <a href="become.htmsl" >Become a Pal</a>
+            <a href="become.html" >Become a Pal</a>
             <a href="aboutR.html"class="active">About Us</a>
             <a href="contact.html">Contact</a>
           </ul>
@@ -31,7 +40,7 @@
     <section id="lumieres">
       <div class="boite">
         <h1>Netpal, my daily companion</h1>
-        <p>To make your life at the university easier</p>
+        <p>To make your life easier at the University </p>
       </div>
     </section>
 
