--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@ setTimeout(function () { win.close();}, 5000);</script>
     <section id="grande_boite">
       <div class="boite">
         <div class="petite_boite">
-          <a href="services.html"><img class ="icon" src="logo_bouffe.jpg"></a>
+          <a href="product.html"><img class ="icon" src="logo_bouffe.jpg"></a>
           <h3>Mealprep</h3>
           <p>Struggling with keeping a balanced diet in times of stress ? Try our mealprep service !</p>
         </div>
         <div class="petite_boite">
-          <a href="services.html"><img class ="icon" src="logo_chien.jpg"></a>
+          <a href="product.html"><img class ="icon" src="logo_chien.jpg"></a>
           <h3>Dogwalking</h3>
           <p>Don't have time to take your dog for a walk ? We can do that !</p>
         </div>
         <div class="petite_boite">
-          <a href="services.html"><img class ="icon" src="logo_tuto.jpg"></a>
+          <a href="product.html"><img class ="icon" src="logo_tuto.jpg"></a>
           <h3>Tutoring</h3>
           <p>Get a tutor to help you throught your exams !</p>
         </div>
