css finalization part 2

--- a/aboutR.html
+++ b/aboutR.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!DOCTYPE html>
 <html lang="en"> 
 
@@ -34,7 +30,7 @@
 		</div>
 	<h1 id="titre1"> More of NetPal </h1>
 	
-	<img class="logo" src="net_pal1.jpg" alt="Suni" style="display: inline;">
+	<img class="logo" src="img/net_pal1.jpg" alt="Suni" style="display: inline;">
 
 
 	<p ><em>Marketplace</em> designed and exclusive to university/college students.The marketplace will display products, tasks, and events; all of which are targeted to students.  This <strong>increases security</strong>, due to encouraging students to trade in campus. There is also an existing validating system such as student numbers that can easily verify users, increasing trust. Revenue can be acquired through obtaining account fees, % of an exchange, ads hosted by businesses. </p>
