--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ setTimeout(function () { win.close();}, 5000);</script>
     <section id="lumieres">
       <div class="boite">
         <h1>Netpal, my daily companion</h1>
+        <img src="net_pal1.jpg">
         <p>To make your life easier at the University </p>
       </div>
     </section>
