--- a/aboutR.html
+++ b/aboutR.html
@@ -50,26 +50,92 @@
 	<p>Welcome! We are a friendly team, helping each other is what NetPal is about! You can join us by sending us an email to the following: contactNetPal@gmail.com 
 	Please include: your full name, what year and program you’re enrolled in and a short text why you would be the perfect teammate.</p>
 
+
+<!---Creating blocks of text --->
+
+
+<div class="block">
+	<h3>heading</h3>
+	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+<div class="block">
+	<h3>heading</h3>
+	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+<div class="block">
+	<h3>heading</h3>
+	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+<div class="clr"></div>
+
+<div id="main-block">
+	<h3>heading</h3>
+	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
+
+<div id="side-block">
+	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
 	<h5>SUBSCRIBE TO OUR NEWSLETTER</h5>
 	<p><input type="email" name="EMAIL" placeholder="Your email address" required="">
 	<input type="submit" value="Sign up"></p>
 
 	<script src="main.js"></script>
+</div>
+<div class="clr"></div>
+<!---
+	<h5>SUBSCRIBE TO OUR NEWSLETTER</h5>
+	<p><input type="email" name="EMAIL" placeholder="Your email address" required="">
+	<input type="submit" value="Sign up"></p>
+
+	<script src="main.js"></script>
+-->
 </body>
 
 <footer id="fin">
 	<div id="info">
-<h3>INFORMATION</h3>
-<p>CONTACT US</p>
-<a href="contact.html" target="_blank" ><img alt="Gmail" title="NetPal on Gmail" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none;" src="img/gmail.png"></a>
-<h5>1-800-NETP (1-800-6387)</h5>
+<h3 style="float:left; ">INFORMATION</h3>
+<div class="clr"></div>
+<p style="float:left;">CONTACT US</p>
+<div class="clr"></div>
+<a href="contact.html" target="_blank" ><img alt="Gmail" title="NetPal on Gmail" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style=" float:left; display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none;" src="img/gmail.png"></a>
+<div class="clr"></div>
+<h5 style= "float:left;">1-800-NETP (1-800-6387)</h5>
 </div>
 <div id="follow">
-<p style="text-align: center"; >FOLLOW US</p>
-<a href="https://fb.me/NetPalapp" target="_blank" ><img alt="Facebook" title="Follow us on Facebook" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style=" display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/facebook.png"></a>
-<a href="https://www.instagram.com/netpal.community/" target="_blank" ><img alt="instagram" title="Check out our instagram feed" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/instagram.png"></a>
+<p style="float: right; "; >FOLLOW US</p>
+<div class="clr"><div>
+<a href="https://fb.me/NetPalapp" target="_blank" ><img alt="Facebook" title="Follow us on Facebook" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style=" float: right; display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/facebook.png"></a>
+<a href="https://www.instagram.com/netpal.community/" target="_blank" ><img alt="instagram" title="Check out our instagram feed" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="float: right; display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/instagram.png"></a>
 <a href="https://www.linkedin.com/company/netpal
-" target="_blank" ><img alt="linkedin" title="NetPal on LinkedIn" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/linkedin.png"></a>
+" target="_blank" ><img alt="linkedin" title="NetPal on LinkedIn" class="synved-share-image synved-social-image synved-social-image-follow" width="48" height="48" style="float:right; display: inline; width:48px;height:48px; margin: 0; padding: 0; border: none; box-shadow: none; text-align: center;" src="img/linkedin.png"></a>
 </div>
 </footer>
 
