--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,13 @@
     			<input type="text" id="fname" name="firstname" placeholder="Your  first name..">
 			
     			<label for="lname">Last Name</label>
-    			<input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    			<input type="text" id="lname" name="lastname" placeholder="Your last name.."><div class="clr"></div>
 			<br>
 			<label for="subject"> Your Message </label>
 			<br>
 			<textarea id="subject" name="subject" placeholder="Write something.." style="height:170px" style= ></textarea>
-			<br>
-			<input type="submit" value="Submit">
+			<div class="clr"></div>
+			<input type="submit" value="Submit" style="margin:40px;">
 			</div>
 		</div>
 		<footer id="fin">
